<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/name"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="19dp"
                android:layout_toLeftOf="@id/btn_share"
                android:text="@string/favorit"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/share"
                android:textSize="12sp" />

        </RelativeLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="53dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/price"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_detail_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/desc"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_detail_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desc"
                    android:textSize="14sp" />

            </TableRow>
        </TableLayout>


    </LinearLayout>
</ScrollView>